k8s/samples/echo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/part-of: cpemon-mvp
    app.kubernetes.io/component: platform-smoke-test
    cpemon.io/layer: platform-test
    cpemon.io/managed-by: gitops-ready-manifest
  name: echo
  namespace: platform
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: echo
  type: ClusterIP
