k8s/samples/echo/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/part-of: cpemon-mvp
    app.kubernetes.io/component: platform-smoke-test
    cpemon.io/layer: platform-test
    cpemon.io/managed-by: gitops-ready-manifest
  name: echo
  namespace: platform
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  number: 80
            path: /
            pathType: Prefix
